--- a/weekly_mission_2/exercises/exercise_3/package.json
+++ b/weekly_mission_2/exercises/exercise_3/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "An exercise from backend-mission with NodeJS",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
