Services Module: User Service class and test cases

--- a/weekly_mission_3/UserServiceProject/package.json
+++ b/weekly_mission_3/UserServiceProject/package.json
@@ -1,14 +1,18 @@
 {
   "name": "userserviceproject",
   "version": "1.0.0",
-  "description": "A project with Users as a service",
+  "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "directories": {
+    "test": "test"
   },
-  "author": "Rodrigo Mijangos",
+  "scripts": {
+    "test": "node ./node_modules/jest/bin/jest.js"
+  },
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "jest": "^28.1.1"
   }
 }
